Network alert details page too much tab GUI issue - resolved

--- a/nocout/nocout/static/css/nocout_default.css
+++ b/nocout/nocout/static/css/nocout_default.css
@@ -71,7 +71,7 @@ span.dept {
 
 /*CSS for Tabs on the widget header (To show the widget setting menu icons)*/
 .box .header-tabs .nav-tabs {
-  margin-right: 35px;
+  /*margin-right: 35px;*/
 }
 
 /*CSS for side menu*/
